# Fischer-Random-Chess-Generator

./: CMakeLists.txt  README.md  q
src/: Board.cpp  Board.h  Generator.cpp  Generator.h  main.cpp
